public/style.css
body {
  font-family: 'Gill Sans', sans-serif;
  background: #fcfcfc;
}

h1 {
  color: #5cda95;
  margin: 0.5em;
}

button {
  font-family: 'Gill Sans', sans-serif;
}

a {
  text-decoration: none;
  color: #002801;
}

label {
  display: block;
}

span {
  color: black;
}

p1 {
  text-decoration: underline;
  font-weight: bold;
}

/* Navbar Styles */
nav {
  font-family: 'Gill Sans', sans-serif;
  background-color: #fcfcfc;
  margin: 0.2em;
}

nav a {
  display: inline-flex;
  margin: 1em;
  color: black;
  justify-content: flex-end;
  font-size: 20px;
}

form div {
  margin: 1em;
  display: inline-block;
}

.main-nav {
  display: flex;
  justify-content: space-between;
}

/* Home Styles */
.home-container {
  position: relative;
  text-align: center;
}

.home-image {
  width: 100%;
  height: 100%;
}

.home-header {
  position: absolute;
  top: 200px;
  right: 300px;
  color: #fcfcfc;
}

.home-button {
  position: absolute;
  top: 270px;
  right: 300px;
  height: 50px;
  width: 160px;
  background-color: #fff7fa;
  padding: 4px;
  flex-grow: 4;
  border-color: #3f0d12;
  font-size: 150%;
}

/* Cart Styles */
.cart-page {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 1em;
  padding: 0.25em;
}

.cart-list {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 10px;
}

.item-quantity {
  height: 35px;
  max-width: 82px;
}

.cart-item-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.cart-action-wrapper {
  display: flex;
  flex-direction: row;
  width: 20%;
}

input.item-quantity {
  text-align: center;
  width: 50%;
}

.cart-item {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin-bottom: 2em;
}

.cart-item-checkout {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 2em;
}

.cart-item-image {
  display: flex;
}

.cart-item-detail {
  padding-left: 1em;
  text-align: left;
  width: 20%;
}

.cart-item-detail-checkout {
  padding-left: 1em;
  text-align: left;
}

.cart-item-remove-btn {
  font-size: large;
  background-color: #fff7fa;
}

.cart-item-row {
  display: flex;
  flex-direction: row;
  margin-bottom: 10px;
}

.quantity-btn {
  height: 42px;
  max-width: 82px;
  background-color: #9ee4ae;
  padding: 13px;
}

.cart-order-summary {
  /* justify-content: flex-end; */
  border: 1px solid #ccc;
  padding: 0.5em;
}

.cart-checkout-btn {
  height: 60px;
  max-width: 180px;
  background-color: #9ee4ae;
  padding: 13px;
  font-size: 30px;
  text-align: center;
}

/* Checkout Styles */
.checkout-page {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.checkout-payment-info {
  display: flex;
  flex-direction: column;
  flex-shrink: 2;
}
.checkout-list {
  margin-top: 2em;
  display: flex;
  flex-direction: column;
  align-content: space-between;
}
.checkout-summary {
  width: 300px;
}

.cart-item-image {
  margin: 1em;
}

/* Product Card Styles */
.faceted-grid {
  display: flex;
  justify-content: space-around;
  margin: 1em;
}
.product-card {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}
.product-card-inner {
  flex-direction: column;
  margin: 1em;
  flex-wrap: wrap;
  flex-grow: 1;
  flex-basis: 25%;
}

.product-card-grid-left {
  margin: 2em;
  width: 400px;
  flex-shrink: 1;
}

.product-card-grid-left > img {
  width: 100%;
}
.product-card-grid-right {
  margin: 2em;
  display: flex;
  flex-direction: column;
  flex-shrink: 1;
  width: 400px;
}
.product-card-grid-right > div {
  margin: 1rem;
  display: flex;
}

.product-card-image {
  width: 200px;
}

.product-card-name {
  margin-top: auto;
  color: rgb(77, 77, 77);
  font: bold;
  margin: 0.25em;
}

.product-card-price {
  color: gray;
  align-content: flex-start;
}

/* Single Product Views */

#single-product-name {
  font-size: 35px;
}

#single-product-price,
#single-product-size {
  font-size: 25px;
}

#single-product-description {
  width: 100%;
  font-size: 18px;
}
#single-product-submit-button {
  height: 50px;
  max-width: 180px;
  background-color: #fff7fa;
  padding: 4px;
  flex-grow: 4;
  border-color: #3f0d12;
  font-size: 150%;
}

.login-submit-btn a {
  margin: 1em;
}
#order-wrapper {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  align-content: flex-start;
}
.completed-order {
  width: 300px;
  margin: 20px;
}

